Changed Disc to supply separe images for the svg board, and render them last for correct z-index.

--- a/www/css/css/style.css
+++ b/www/css/css/style.css
@@ -69,6 +69,12 @@ rect.btn {
   height: 600px;
   transform-origin: 0 0;
 }
+#board-holder #board svg g rect {
+  cursor: pointer;
+}
+#board-holder #board svg g image {
+  pointer-events: none;
+}
 circle {
   fill: white;
 }
